# task-cli

./: .clangd  CMakeLists.txt  README.md  build.sh  flake.nix  sample-db.json  tasks-db.json
include/: File.h  Node.h  Parser.h  TaskManager.h  Token.h
src/: main.cpp  node.cpp  parser.cpp  task-manager.cpp  token.cpp
